--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,7 @@ jobs:
           name: Build docs
           command: |
             python -m pip install ".[sphinx]"
-            make -C docs/ html
+            cd docs; make html
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
