Include artifacts in CircleCI config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,6 +36,8 @@ jobs:
             . venv/bin/activate
             python -m pip install ".[sphinx]"
             cd docs; make html
+      - store_artifacts:
+          path: docs/_build/html/
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
