--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ dependencies = [
 sphinx = [
     "pydata-sphinx-theme",
     "sphinx-design",
-    "myst-parser",
+    "myst-nb",
 ]
 
 [project.urls]
