--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,6 +32,7 @@ jobs:
       - run:
           name: Build docs
           command: |
+            sudo apt-get update && sudo apt-get install pandoc
             python -m venv venv
             . venv/bin/activate
             python -m pip install ".[sphinx]"
