--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,8 +35,14 @@ jobs:
             sudo apt-get update && sudo apt-get install pandoc
             python -m venv venv
             . venv/bin/activate
-            python -m pip install ".[sphinx]"
+            python -m pip install ".[dev,sphinx]"
             cd docs; make html
+      - run:
+          name: Run tests
+          # TODO: This coverage report could be submitted to codecov
+          command: |
+            . venv/bin/activate
+            python -m pytest --cov=src --cov-report=term --cov-report=xml
       - store_artifacts:
           path: docs/_build/html/
 
