--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -23,6 +23,7 @@ jobs:
         with:
           python-version: '3.11'
       - run: pip install ."[dev, sphinx]"
+      - run: sudo apt-get update && sudo apt-get install -y pandoc
 
       - name: Run tests
         run: |
