--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -4,6 +4,8 @@ on:
   # Triggers the workflow on push events but only for the "main" branch
   push:
     branches: [ "main" ]
+  pull_request:
+    types: [opened, reopened]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
