Add ref label for MyST tag pages

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ dependencies = [
 
 [project.optional-dependencies]
 sphinx = [
-    "pydata-sphinx-theme",
+    "pydata-sphinx-theme>=0.13",
     "sphinx-design",
     "nbsphinx",
     "myst-parser"
